--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,2 +1,4 @@
 // This File is imported last, and will override other styles in the cascade
-// Add styles here to make changes without digging in too much
+// Add styles here to customize your blog
+// By default this file should be empty - please help us move stuff in its proper place:
+// https://github.com/lucaslew/whitespace/pull/17
